--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "rollup-starter-lib",
+  "name": "image-provider",
   "version": "1.0.0",
   "main": "dist/how-long-till-lunch.cjs.js",
   "module": "dist/how-long-till-lunch.esm.js",
   "browser": "dist/how-long-till-lunch.umd.js",
   "dependencies": {
-    "ms": "^2.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.1",
